# liquidation-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  all_users.csv  blend_assets.db  blend_users.db  comet.wasm  config.json  example.config.json
crates/artemis-core/: Cargo.toml
crates/artemis-core/src/: engine.rs  lib.rs  types.rs
crates/artemis-core/src/collectors/: block_collector.rs  log_collector.rs  mod.rs
crates/artemis-core/src/executors/: mod.rs  soroban_executor.rs
crates/artemis-core/src/utilities/: mod.rs
crates/artemis-core/tests/: main.rs
crates/clients/soroban/: Cargo.toml
crates/clients/soroban/src/: server.rs
crates/generator/src/: parser.rs
crates/strategies/blend-auctioneer/: Cargo.toml
crates/strategies/blend-auctioneer/src/: lib.rs  strategy.rs
crates/strategies/blend-inventory-managment/: Cargo.toml  README.md
crates/strategies/blend-liquidator/: Cargo.toml  README.md
crates/strategies/blend-liquidator/src/: auction_manager.rs  bindings.rs  constants.rs  helper.rs  lib.rs  strategy.rs  transaction_builder.rs  types.rs
crates/strategies/blend-strategies/: Cargo.toml  README.md  protocols.json
crates/strategies/blend-strategies/src/: auction_manager.rs  auctioneer_strategy.rs  bindings.rs  constants.rs  db_manager.rs  error_logger.rs  file_logger.rs  helper.rs  inventory_management_strategy.rs  lib.rs  liquidation_strategy.rs  transaction_builder.rs  types.rs
crates/strategies/blend-utilities/: .gas-snapshot  Cargo.toml
crates/strategies/blend-utilities/src/: contracts.rs  helper.rs  lib.rs  transaction_builder.rs  types.rs
crates/strategies/opensea-sudo-arb/src/: strategy.rs  types.rs
