[workspace]
members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/*",
    "crates/clients/*", 
    "examples/*",
]

default-members = ["bin/artemis", "bin/cli"]

[workspace.dependencies]
## stellar
stellar-xdr = { version = "20.0.2", default-features = true, features = [] }

## eth
ethers = { version = "2", features = ["ws", "rustls"]}


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

