[workspace]
members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/*",
]

default-members = ["bin/artemis", "bin/cli"]

[workspace.dependencies]
## stellar
stellar-xdr = { version = "20.1.0", default-features = true, features = [] }
stellar-rpc-client = "20.3.5"
soroban-cli = {version = "20.3.1"}
soroban-fixed-point-math = {version = "1.0.0"}

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

