[workspace]
members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/*",
]

default-members = ["bin/artemis", "bin/cli"]

[workspace.dependencies]
## stellar
stellar-xdr = { version = "21.1.0", default-features = true, features = [] }
stellar-rpc-client = "21.2.0"
soroban-fixed-point-math = {version = "1.0.0"}

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

