[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## stellar
stellar-xdr = { workspace = true}
stellar-rpc-client = {workspace = true}
ed25519-dalek = "=2.0.0"
stellar-strkey = "0.0.7"

## async
async-trait = "0.1.64"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }

## misc
anyhow = "1.0.70"
tracing = "0.1.37"
reqwest = "0.12.4"
serde_json = "1.0"