[package]
name = "soroban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
http = {version = "1.0.0"}
serde = "1.0.82"
serde-aux = "4.1.2"
serde_derive = "1.0.82"
tokio = { version = "1.18", features = ["full"] }
serde_json = "1.0.82"
