[package]
name = "blend-liquidator"
version = "0.1.0"
edition = "2021"

[dependencies]

## stellar
stellar-xdr = { workspace = true }
soroban-rpc = {workspace = true}
soroban-cli = {workspace = true}
ed25519-dalek = "=2.0.0"
stellar-strkey = "0.0.7"
soroban-spec-tools = "20.2.0"
artemis-core = { path = "../../artemis-core" }
blend-utilities = { path = "../blend-utilities" }

## async
async-trait = "0.1.64"

## misc
anyhow = "1.0.70"
tracing = "0.1.37"


## utils
rusqlite = "0.31.0"