[package]
name = "blend-strategies"
version = "0.1.0"
edition = "2021"

[dependencies]

## stellar
stellar-xdr = { workspace=true }
soroban-rpc = {workspace = true}
soroban-cli = {workspace = true}
ed25519-dalek = "=2.0.0"
stellar-strkey = "0.0.7"
artemis-core = { path = "../../artemis-core" }
soroban-spec-tools = "20.2.0"
soroban-fixed-point-math = "1.0.0"

## async
async-trait = "0.1.64"

## misc
serde = "1.0.192"
anyhow = "1.0.70"
tracing = "0.1.37"
rusqlite = "0.31.0"