[package]
name = "blend-strategies"
version = "0.1.0"
edition = "2021"

[dependencies]

## stellar
stellar-xdr = { workspace=true }
stellar-rpc-client = {workspace = true}
ed25519-dalek = "=2.0.0"
stellar-strkey = "0.0.8"
artemis-core = { path = "../../artemis-core" }
soroban-spec-tools = "21.0.0"
soroban-fixed-point-math = "1.0.0"

## async
async-trait = "0.1.64"

## misc
serde = "1.0.192"
anyhow = "1.0.70"
tracing = "0.1.37"
rusqlite = "0.31.0"
reqwest = "0.12.4"
serde_json = "1.0"