[package]
name = "blend-utilities"
version = "0.1.0"
edition = "2021"

[dependencies]

## stellar
stellar-xdr = { version = "20.0.2", default-features = true, features = [] }
soroban-cli = "20.2.0"
ed25519-dalek = "=2.0.0"
stellar-strkey = "0.0.7"
soroban-spec-tools = "20.2.0"
artemis-core = { path = "../../artemis-core" }

## async
async-trait = "0.1.64"

## misc
anyhow = "1.0.70"
tracing = "0.1.37"
rusqlite = "0.31.0"


## utils
csv = { version = "1.3.0"}