[package]
name = "blend-utilities"
version = "0.1.0"
edition = "2021"

[dependencies]

## stellar
stellar-xdr = { workspace = true}
soroban-rpc = {workspace = true}
soroban-cli = {workspace = true}
ed25519-dalek = "=2.0.0"
soroban-spec-tools = "20.2.0"
artemis-core = { path = "../../artemis-core" }

## misc
anyhow = "1.0.70"
rusqlite = "0.31.0"

